@@ -18,12 +18,12 @@
 # <Control>k  5 1000 10000  @AT_BINDIR@/gok --login --access-method=directselection
 #
 # Means press Contol-k 5 times, holding each keypress down for at least 1000ms
-# each time and with no greater interval than 10000ms between each event in the
-# sequence.  A duration value of 0 indicates that a keypress of any length is
-# accepted.  The timeout value is only meaningful if the #times value is > 1.
-# Completing the above example sequence will invoke the gnome on screen keyboard
-# program, gok.  Note that you cannot release the <Control> key while pressing
-# otherwise the sequence will be lost.
+# (1s) each time and with no greater interval than 10000ms (10s) between each
+# event in the sequence.  A duration value of 0 indicates that a keypress of
+# any length is accepted.  The timeout value is only meaningful if the #times
+# value is > 1.  Completing the above example sequence will invoke the gnome on
+# screen keyboard program, gok.  Note that you cannot release the <Control> key
+# while pressing otherwise the sequence will be lost.
 #
 # e.g.
 # Shift_L  5 1000 10000  @AT_BINDIR@/gok --login --access-method=directselection
@@ -39,7 +39,7 @@
 #
 # e.g.
 #
-# <Mouse2>  4 3000 6000  @AT_BINDIR@/gnopernicus
+# <Mouse2>  4 3000 6000  @AT_BINDIR@/orca -n -d main-window
 #
 # Note that mouse numbers are 1-based so <Mouse1> is the left mouse button,
 # <Mouse3> is the right mouse button and <Mouse2> is the middle mouse button.
@@ -53,25 +53,34 @@
 #
 # <Add>  @AT_BINDIR@/gnome-mag
 #
-# Note that pressing any other keys 
-
-# current:
 
 # hold right or left mouse button 3 times for 3 seconds each time
+#
 <Mouse1> 3 3000 10000 @AT_BINDIR@/gok --login --access-method=directselection
+
 # we add the right mouse button as it may be the left mouse button
 # for a left handed user
+#
 <Mouse3> 3 3000 10000 @AT_BINDIR@/gok --login --access-method=directselection
 
 <Switch1> 1 5000 0 @AT_BINDIR@/gok --login --access-method=automaticscanning --scan-action=switch1 --select-action=switch1
 <Switch2> 3 50 3000 @AT_BINDIR@/gok --login --access-method=inversescanning --scan-action=switch1 --select-action=switch2
 <Switch3> 3 1000 10000 @AT_BINDIR@/gok --login  --access-method=automaticscanning --scan-action=switch3 --select-action=switch3
 
-# press ctrl-s for 1 second to launch gnopernicus speech
-# gnopernicus, speech mode
-<Control>s  1 1000 10000  @AT_BINDIR@/srcore --login --enable-speech
-# press ctrl-m for 1 second to launch gnopernicus magnifier
-<Control>m  1 1000 10000  @AT_BINDIR@/srcore --login --enable-magnifier --disable-speech --disable-braille
-# press ctrl-g for 1 second to launch both gnopernicus speech and magnifier
-<Control>g  1 1000 10000  @AT_BINDIR@/srcore --login
+# press ctrl-s for 1 second to launch orca in speech mode
+#
+<Control>s  1 1000 10000  @AT_BINDIR@/orca -n -d main-window
+
+# press ctrl-m for 1 second to launch orca in mag mode
+#
+<Control>m  1 1000 10000  @AT_BINDIR@/orca -n -d main-window -d speech -e magnifier
+
+# press ctrl-o or ctrl-g for 1 second to launch orca in speech and mag mode
+#
+<Control>o  1 1000 10000  @AT_BINDIR@/orca -n -d main-window -e magnifier
+<Control>g  1 1000 10000  @AT_BINDIR@/orca -n -d main-window -e magnifier
+
+# Start GOK with direct selection mode.
+#
+<Control>k  5 1000 10000  @AT_BINDIR@/gok --login --access-method=directselection
 
