@@ -1,3 +1,10 @@
+2006-12-08  Brian Cameron  <brian.cameron@sun.com>
+
+	* gui/modules/AccessDwellMouseEvents.in,
+	  gui/modules/AccessKeyMouseEvents.in: Update the default commands
+	  so that they start orca instead of Gnopernicus.  Note that you
+	  need Orca v2.17.4 or later to support running it with GDM.
+
 2006-12-08  William Jon McCann  <mccann@jhu.edu>
 
 	* daemon/gdmconsolekit.c: (close_ck_session):
